fix: image-blurred-test receives click on icon favorite

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,10 @@ nav h1 a {
     height: 100%;
 }
 
+#image-blurred-text {
+    z-index: -1;
+}
+
 .center {
     position: absolute;
     top: 50%;
